Konvertering av hendelseType/hendelseUndertype